<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android-v07</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name_hint">姓名</string>
    <string name="age_hint">年龄</string>
    <string name="tel_hint">电话</string>
    <string name="save">Save</string>
    <string name="read">Read</string>

</resources>
